--- a/Breakout game/index.html
+++ b/Breakout game/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 class="score"></h1>
+    <h1 class="result"></h1>
     <div class="grid">
       
     </div>
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
   </body>
 </html>
